# burn-cnn

./: Cargo.toml
src/: main.rs  model.rs
