[package]
name = "burn-cnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.9.0", features=["std", "train", "wgpu"]}
burn-tch = "0.9.0"
burn-wgpu = "0.9.0"

# Serialization
serde = "1"
